--- a/src/app/news/news-list/news-list.component.scss
+++ b/src/app/news/news-list/news-list.component.scss
@@ -1,25 +1,24 @@
 @import '../../../variables';
+@import "../../../mixin";
 .news-list-1 {
   ul {
-    margin: 0;
-    padding: 0;
-
+    @include ul-list();
     li {
-      list-style: none;
       background-color: white;
       padding: 8px;
-      cursor: pointer;
       margin-bottom: 12px;
       border-radius: 1px;
       display: flex;
       flex-wrap: wrap;
       border-bottom: transparent 3px solid ;
       transition: all 1.5s;
+      position: relative;
       &:hover {
         background-color: #f9f9f9;
         border-bottom: $baseColor 3px solid ;
         box-shadow: rgba(203, 203, 203, .5) 0 1px 2px 0;
       }
+      //@include line_animation(0.8s);
 
       h5 {
         width: 100%;
@@ -88,23 +87,23 @@
 }
 .news-list-2 {
   ul {
-    margin: 0;
-    padding: 0;
+    @include ul-list();
 
     li {
-      list-style: none;
+
       background-color: white;
       padding: 8px;
       cursor: pointer;
       border-radius: 1px;
       display: flex;
       flex-wrap: wrap;
-      border-left: transparent 3px solid ;
+      border-left: 3px solid transparent;
       transition: all 1.5s;
+      position: relative;
+
       &:hover {
         background-color: #f9f9f9;
-        border-left: $baseColor 3px solid ;
-        //box-shadow: rgba(203, 203, 203, .5) 0 1px 2px 0;
+        border-left: 3px solid $baseColor;
       }
 
       h5 {
@@ -131,6 +130,97 @@
         }
       }
 
+
+    }
+  }
+}
+.news-list-3 {
+  ul {
+@include ul-list();
+
+    li {
+      @include clearfix();
+      overflow: hidden;
+      background-color: white;
+      padding: 8px;
+      cursor: pointer;
+      border-radius: 1px;
+      display: block;
+      flex-wrap: nowrap;
+      border-left: 3px solid transparent;
+      border-right: 3px solid transparent;
+      transition: all 1.5s;
+      position: relative;
+
+      &:hover {
+        background-color: #f9f9f9;
+        border-left: 3px solid $baseColor;
+        border-right: 3px solid $baseColor;
+        color: $baseColor;
+      }
+
+.article-img{
+
+  width: 15%;
+  padding-top: 8%;
+  position: relative;
+  float: left;
+
+  img {
+    width: 100%;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+
+}
+
+      .right{
+        padding: 0 15px;
+        width:  85%;
+        position: relative;
+        float: left;
+
+        h5 {
+
+          width: 100%;
+          font-size: 18px;
+          margin: 0;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+
+        }
+
+
+        .info {
+          text-align: right;
+          width: 100%;
+          & > span {
+            font-size: 12px;
+            color: #b3b3b3;
+            margin-right: 15px;
+
+            .fa {
+              margin-right: 5px;
+            }
+          }
+        }
+
+        .type{
+
+          text-align: right;
+          width: 100%;
+          font-size: 12px;
+         &>span{
+           color: #b3b3b3;
+           margin-right: 15px;
+         }
+
+        }
+
+      }
 
     }
   }
