--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'variables';
 @import '../node_modules/bootstrap/scss/bootstrap';
-
 $fa-font-path: "../node_modules/font-awesome/fonts";
 @import'~font-awesome/scss/font-awesome.scss';
-
+@import "mixin";
 
 
 body{
   background-color: #f2f2f2;
+
 }
 
 .top{
