--- a/src/app/news/news-list/news-list.component.html
+++ b/src/app/news/news-list/news-list.component.html
@@ -3,7 +3,7 @@
 <div class="news-list-1" *ngIf="type==1">
 
   <ul>
-    <li *ngFor="let item of newsList">
+    <li *ngFor="let item of newsList" (click)="jumpLink(item.id)">
       <!--h4用于手机显示-->
       <h5 class="d-md-none mobile-h5">{{item.title}}</h5>
       <h5 class="d-none d-md-block">{{item.title}}</h5>
@@ -20,10 +20,10 @@
 </div>
 
 <!--type=2 仅包含标题 作者(可自定义)  发布时间（可自定义） 的 新闻列表-->
-<div class="news-list-2" *ngIf="type==2">
+<div class="news-list-2" *ngIf="type==2" >
 
   <ul>
-    <li *ngFor="let item of newsList">
+    <li *ngFor="let item of newsList" (click)="jumpLink(item.id)">
       <h5 class="d-md-block">{{item.title}}</h5>
       <div class="info"><span *ngIf="author">{{item.authorName}}</span><span *ngIf="createTime">{{item.createTime | date : 'yyyy-MM-dd hh:mm '}}</span></div>
     </li>
@@ -38,8 +38,8 @@
 <div class="news-list-3" *ngIf="type==3">
 
   <ul>
-    <div *ngFor="let item of newsList">
-    <li >
+    <ng-container *ngFor="let item of newsList">
+    <li (click)="jumpLink(item.id)">
       <div class="article-img"><img [src]="item.firstImg" alt=""></div>
       <div class="right">
         <div class="info">
@@ -53,7 +53,7 @@
       </div>
     </li>
       <hr>
-    </div>
+    </ng-container>
   </ul>
 
 
