--- a/src/app/news/article-page/article-page.component.scss
+++ b/src/app/news/article-page/article-page.component.scss
@@ -7,6 +7,11 @@
     @include mixin-box-shadow();
     padding-top: 30px;
     padding-bottom: 30px;
+    //padding-bottom: 250px;
+    //background-image: url("../../../assets/img/bgbm.png");
+    //background-size: contain;
+    //background-position: bottom center;
+    //background-repeat: no-repeat;
 
     h2{
       font-size: 36px;
@@ -39,30 +44,99 @@
     }
 
     .likeWrapper{
-      .like,.dislike{
-        flex: 1;
-        font-size: 80px;
-       i{
-         transition: all 0.8s;
-         cursor: pointer;
-         &:hover{
-           font-size: 90px;
-         }
-       }
-      }
-      .like{
-        color:red;
-        text-align: right;
-        padding-right: 20px;
+      height: 120px;
+      text-align: center;
+      position: relative;
+      .heart{
+        margin: 0 auto;
 
       }
-      .dislike{
-        color:orange;
-        text-align: left;
-        padding-left: 20px;
+      span {
+        color: gray;
+        font-size: 12px;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
       }
+
     }
 
   }
 
+  .commentWrapper{
+    margin-top: 50px;
+    padding-top: 15px;
+    padding-bottom: 30px;
+    .comment-input{
+      width: 100%;
+      border: 1px solid #d7d7d7;
+      border-radius: 4px;
+      padding: 15px;
+    }
+    .submit-wrapper{
+      text-align: right;
+     button{
+       cursor: pointer;
+     }
+    }
+
+  }
+
+}
+
+
+.heart {
+  background:url(../../../assets/img/web_heart_animation.png);
+  background-position:left;
+  background-repeat:no-repeat;
+  height:100px;
+  width:100px;
+  cursor:pointer;
+  position:absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background-size:2900%;
+  animation: heartSize 0.5s alternate linear;
+}
+.heart:hover, .heart:focus{
+  background-position:right;
+}
+
+@-webkit-keyframes heartSize {
+  0% {
+    height:100px;
+    width:100px;
+  }
+  100% {
+    height:130px;
+    width:13px;
+  }
+}
+
+@-webkit-keyframes heartBlast {
+  0% {
+    background-position:left;
+  }
+  100% {
+    background-position:right;
+  }
+}
+
+@keyframes heartBlast {
+  0% {
+    background-position:left;
+  }
+  100% {
+    background-position:right;
+  }
+}
+
+.heartAnimation {
+  animation-name:heartBlast;
+  animation-duration:.8s;
+  animation-iteration-count:1;
+  animation-timing-function:steps(28);
+  background-position:right;
 }
