--- a/src/app/news/article-page/article-page.component.scss
+++ b/src/app/news/article-page/article-page.component.scss
@@ -80,6 +80,49 @@
        cursor: pointer;
      }
     }
+    .comment-list{
+      ul{
+        @include ul-list;
+        li{
+          padding-top: 15px;
+          padding-bottom: 15px;
+          .comment-list-top{
+            display: flex;
+            .avatar{
+              border-radius: 50%;
+              height: 30px;
+              width: 30px;
+              img{
+                border-radius: 50%;
+                width: 100%;
+                height: 100%;
+              }
+            }
+            .user-info {
+              padding: 0 15px;
+              flex:1;
+              text-align: left;
+              & > span {
+                font-size: 12px;
+                color: #a1a1a1;
+                &:not(:first-child){
+                  margin-left: 25px;
+                }
+
+                .fa {
+                  margin-right: 5px;
+                }
+              }
+            }
+          }
+
+          .comment-content{
+            padding: 2px 40px;
+          }
+        }
+      }
+
+    }
 
   }
 
