Dynamically creating components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,19 +34,21 @@
 
   <router-outlet>
   </router-outlet>
-  <footer>
+  <button (click)="createComponentFactory('hhe')">jia</button>
+  <button (click)="destroyComponent()">destroy</button>
+  <footer #alertContainer>
     Super Song 版权所有
   </footer>
 
 </div>
 
 </div>
-<div class="d-md-none mobile-menu">
-<div class="menu-primary"><i class="fa fa-home fa-2x"></i><div>首页</div></div>
-  <div class="menu-primary"> <i class="fa fa-newspaper-o fa-2x"></i><div>新闻</div></div>
-  <div class="menu-primary"><i class="fa fa-mortar-board fa-2x"></i><div>Hi! Youth</div></div>
-  <div class="menu-primary"> <i class="fa fa-user fa-2x"></i><div>个人中心</div></div>
-</div>
+<!--<div class="d-md-none mobile-menu">-->
+<!--<div class="menu-primary"><i class="fa fa-home fa-2x"></i><div>首页</div></div>-->
+  <!--<div class="menu-primary"> <i class="fa fa-newspaper-o fa-2x"></i><div>新闻</div></div>-->
+  <!--<div class="menu-primary"><i class="fa fa-mortar-board fa-2x"></i><div>Hi! Youth</div></div>-->
+  <!--<div class="menu-primary"> <i class="fa fa-user fa-2x"></i><div>个人中心</div></div>-->
+<!--</div>-->
 
 
   <!--<div class="container" >-->
