--- a/src/app/news/article-page/article-page.component.html
+++ b/src/app/news/article-page/article-page.component.html
@@ -8,21 +8,26 @@
     <!--</div>-->
 
     <!--<div class="col-12 col-md-9">-->
-    <div  class="col-12 col-md-12 newsWrapper">
+    <div class="col-12 col-md-12 newsWrapper">
       <div class="row">
         <div class="col-12"><h2>{{news?.title}}</h2></div>
-        <div class=" col-12 info"><span>{{news?.authorName}}</span><span>{{news?.createTime | date : 'yyyy-MM-dd hh:mm '}}</span><span> <i class="fa fa-eye"></i>{{news?.viewCount}}</span></div>
+        <div class=" col-12 info">
+          <span>{{news?.authorName}}</span><span>{{news?.createTime | date : 'yyyy-MM-dd hh:mm '}}</span><span> <i
+          class="fa fa-eye"></i>{{news?.viewCount}}</span></div>
         <div class="col-12"><p class="summary">{{news?.digest}}</p></div>
       </div>
       <div class="row">
 
         <div class="col-12 contentWrapper" [innerHTML]="showHtml"></div>
+        <div class="col-12">
+          11
+        </div>
 
       </div>
       <div class="row likeWrapper">
 
         <div class="col-12">
-          <div class="heart" (click)="likeFn()"  [ngClass]="{'heartAnimation':like}" id="like1" rel="like">
+          <div class="heart" (click)="likeFn()" [ngClass]="{'heartAnimation':like}" id="like1" rel="like">
           </div>
           <span *ngIf="!like">如果喜欢这篇文章 可以给我你的小心心吗？</span>
           <span *ngIf="like" style="color: #e2264d;font-weight: bold">Thanks!</span>
@@ -37,24 +42,21 @@
         </div>
 
         <div class="col-12 submit-wrapper">
-        <button class="btn btn-primary" (click)="addComment()">发布</button>
+          <button class="btn btn-primary" (click)="addComment()">发布</button>
         </div>
         <div class="col-12">评论列表</div>
         <div class="col-12 comment-list">
-         <ul>
-           <li>
-             <div class="comment-list-top">
-               <div class="avatar"><img src="../../../assets/img/avatar.jpg" alt=""></div>
-               <!--<span>{{comment?.authorName}}</span><span>{{comment?.createTime | date : 'yyyy-MM-dd hh:mm '}}</span>-->
-               <div class="user-info"><span>小明同学</span><span>2018-01-01</span></div>
-             </div>
-<div class="comment-content">
-  最近一段时间，对于中国人来说可谓是一个难得的好日子，2019年新年伊始，中国航天事业又实现了一次全新的突破，玉兔二号成功登陆月球背面创造了人类历史的一个新的奇迹，回顾中国航天工业发展的历程可以说是让人感慨颇多，如今中国航天不断取得突破的时候，航天的科普之路到底又该怎么走呢？
-</div>
-
-
-           </li>
-         </ul>
+          <ul>
+            <li *ngFor="let item of commentList">
+              <div class="comment-list-top">
+                <div class="avatar"><img src="../../../assets/img/avatar.jpg" alt=""></div>
+                <div class="user-info"><span>{{item?.commentToName}}</span><span>{{item?.createTime | date:'yyyy-MM-dd hh:MM'}}</span></div>
+              </div>
+              <div class="comment-content">
+                {{item?.content}}
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
 
