--- a/src/app/news/article-page/article-page.component.scss
+++ b/src/app/news/article-page/article-page.component.scss
@@ -130,9 +130,7 @@
 
 
 .heart {
-  background:url(../../../assets/img/web_heart_animation.png);
-  background-position:left;
-  background-repeat:no-repeat;
+  background: url(../../../assets/img/web_heart_animation.png) no-repeat left;
   height:100px;
   width:100px;
   cursor:pointer;
