--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
   <button (click)="createComponentFactory('hhe')">动态创建组件 测试</button>
   <button (click)="destroyComponent()">destroy</button>
   <footer #alertContainer>
-    Super Song 版权所有
+    Youth 校内网
   </footer>
 
 </div>
