--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
           <div class="li" routerLinkActive="nav-active"><a href="javascript:void(0)">失物招领</a></div>
           <div class="li" routerLinkActive="nav-active"><a href="javascript:void(0)">校友拼车</a></div>
           <div class="li" routerLinkActive="nav-active"><a href="javascript:void(0)">校园设施报修</a></div>
-          <div class="li" routerLinkActive="nav-active"><a href="javascript:void(0)">功能4</a></div>
+          <div class="li" routerLinkActive="nav-active"><a routerLink="/table" href="javascript:void(0)">功能4</a></div>
         </div>
       </div>
       <div class="user-info col-md-2 col-6">
@@ -34,9 +34,9 @@
   </router-outlet>
   <button (click)="createComponentFactory('hhe')">动态创建组件 测试</button>
   <button (click)="destroyComponent()">destroy</button>
-  <footer #alertContainer>
-    Youth 校内网
-  </footer>
+  <!--<footer #alertContainer>-->
+    <!--Youth 校内网-->
+  <!--</footer>-->
 
 </div>
 
