--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,9 +34,9 @@
   </router-outlet>
   <button (click)="createComponentFactory('hhe')">动态创建组件 测试</button>
   <button (click)="destroyComponent()">destroy</button>
-  <!--<footer #alertContainer>-->
-    <!--Youth 校内网-->
-  <!--</footer>-->
+  <footer #alertContainer>
+    Youth 校内网
+  </footer>
 
 </div>
 
