--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,10 @@
       </div>
     </nav>
   </div>
-  <div class="change-theme"><button (click)="changTheme()">切换主题</button></div>
+  <div class="change-theme">
+    <!--<button (click)="changTheme()">切换主题</button>-->
+    <button (click)="toAdmin()">登录到后台</button>
+  </div>
 </div>
 
 
